Bug 95793 - Avoid the keypad of desktop client from stealing the focus. r=dominic.kuo

--- a/b2g/chrome/content/desktop.css
+++ b/b2g/chrome/content/desktop.css
@@ -28,6 +28,7 @@ html, body {
 #controls {
   display: none;
   pointer-events: none;
+  -moz-user-focus: ignore;
 }
 /*
  * Somehow we couldn't have shown and hidden `#controls` properly via Media Queries.
